# torch-sla

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  TODO.md  pyproject.toml  setup.py
.github/workflows/: deploy-docs.yml  publish.yml
assets/benchmarks/: cg_scaling.json  condition_number_scaling.json  connected_components_scaling.json  det_backward_scaling.json  det_scaling.json  eigsh_scaling.json  logdet_scaling.json  lu_scaling.json  matmat_scaling.json  nonlinear_solve_scaling.json  norm_scaling.json  pyamg_scaling.json  solve_backends_scaling.json  solve_batch_scaling.json  spmv_scaling.json  strumpack_scaling.json  svd_scaling.json  transpose_scaling.json
assets/benchmarks/cuda/: cg_scaling.json  connected_components_scaling.json  det_scaling.json  eigsh_scaling.json  logdet_scaling.json  matmat_scaling.json  norm_scaling.json  spmv_scaling.json  svd_scaling.json  transpose_scaling.json
assets/examples/: lobpcg_fix_comparison_data_cpu_cuda.json  lobpcg_fix_comparison_data_cpu_mps.json
benchmarks/: README.md  _probe_worker.py  benchmark_adjoint_vs_naive.py  benchmark_all_ops_scaling.py  benchmark_complex_solve.py  benchmark_distributed.py  benchmark_distributed_4gpu.py  benchmark_distributed_scaling.py  benchmark_inverse_coefficient.py  benchmark_multi_gpu_scaling.py  benchmark_op_scaling.py  benchmark_scaling_curves.py  benchmark_single_gpu_scaling.py  optimize_figures.sh  plot_device_compare.py
benchmarks/distributed/: benchmark_distributed_4gpu.py  benchmark_distributed_scaling.py
benchmarks/ops/: benchmark_adjoint_vs_naive.py  benchmark_inverse_coefficient.py  benchmark_mm.py
benchmarks/scaling/: benchmark_all_ops_scaling.py  benchmark_multi_gpu_scaling.py  benchmark_op_scaling.py  benchmark_scaling_curves.py  benchmark_single_gpu_scaling.py  plot_device_compare.py
benchmarks/scaling/ops/: condition_number.py  det.py  lu.py  (+19 more)
benchmarks/solvers/: benchmark_complex_solve.py  benchmark_large_scale.py  benchmark_solvers.py  benchmark_suitesparse.py
docs/images/: halo_exchange.dot
docs/source/: architecture.rst  backends.rst  benchmarks.rst  conf.py  distributed_operations.rst  distributed_scaling.rst  dsparse_tensor.rst  examples.rst  index.rst  installation.rst  introduction.rst  operations.rst  sparse_tensor.rst  tips.rst  torch_sla.rst
examples/: lobpcg_convergence_benchmark.py  lobpcg_fix_comparison.py  lobpcg_fix_comparison_distributed.py  lobpcg_fix_comparison_merge.py  lobpcg_fix_comparison_multi_device.py
examples/distributed/: README.md  distributed_connected_components.py  distributed_eigsh.py  distributed_matvec.py  distributed_nonlinear_solve.py  distributed_persistence.py  distributed_solve.py  launch.sh
examples/lobpcg/: README.md  convergence_benchmark.py
tests/: _suitesparse.py  conftest.py  test_amg_preconditioner.py  test_amgx_backend.py  test_b3_dsparse_via_sparse_tensor_multiprocess.py  test_b4_krylov_via_sparse_tensor_multiprocess.py  test_b5_dsparse_matrix_deprecation.py  test_batch_solve.py  test_complex_support.py  test_cudss_autodetect.py  test_distributed_cg_shard_multiprocess.py  test_distributed_gather_owned_to_global.py  test_distributed_krylov_shard_multiprocess.py  test_distributed_precond_shard_multiprocess.py  test_dsparse_batch_shard_multiprocess.py  test_dsparse_dtensor_mirror_multiprocess.py  test_dsparse_logdet_multiprocess.py  test_dsparse_matrix_deprecation.py  test_dsparse_topology_multiprocess.py  test_dsparse_via_sparse_tensor_multiprocess.py  test_gather_global_multiprocess.py  test_graph_connected_components.py  test_krylov_via_sparse_tensor_multiprocess.py  test_lobpcg_eigsh.py  test_lobpcg_fp32.py  test_partition_hilbert.py  test_pyamg_backend.py  test_solve_api.py  test_solver_cache.py  test_solver_config.py  test_solver_config_presets.py  test_sparse_tensor.py  test_sparse_tensor_extract_partition.py  test_sparse_tensor_factories.py  test_unified_solve_dispatches_to_dsparse.py
tests/backends/: test_ilu_asm_precond.py  test_pyamg_backend.py  test_strumpack_backend.py
tests/complex/: test_complex_support.py  test_helmholtz_benchmark.py
tests/distributed/: test_dsparse_batch_shard_multiprocess.py  test_dsparse_connected_components_multiprocess.py  test_dsparse_eigsh_multiprocess.py  test_dsparse_elementwise_multiprocess.py  test_dsparse_io_multiprocess.py  test_dsparse_io_single_process.py  test_dsparse_lsqr_lsmr_multiprocess.py  test_dsparse_nonlinear_bratu_multiprocess.py  test_dsparse_owned_scatter_nonmonotone_multiprocess.py  test_dsparse_reductions_multiprocess.py  test_dsparse_sugar_methods_multiprocess.py  test_dsparse_tensor_mirror_props_multiprocess.py  test_dsparse_tensor_to_device_dtype_multiprocess.py
tests/eigen/: test_complex_grad_det_eigsh.py  test_eigsh_benchmark.py  test_lobpcg_eigsh.py
tests/lobpcg/: README.md  bench_distributed.py  bench_multi_device.py  bench_v1_vs_v2.py  merge_plots.py
tests/partition/: test_sparse_tensor_extract_partition.py
tests/solvers/: test_batch_solve.py  test_lsqr_lsmr.py  test_minres_stopping.py  test_nonlinear_solve.py  test_nonlinear_solve_benchmark.py  test_poisson_benchmark.py  test_pytorch_gmres_minres.py  test_solver_cache.py  test_spsolve.py  test_unified_solve_dispatches_to_dsparse.py
tests/sparse_tensor/: test_sparse_tensor.py
torch_sla/: __init__.py  batch_solve.py  benchmark.py  datasets.py  det.py  distributed.py  distributed_matvec.py  distributed_solve.py  io.py  linear_solve.py  partition.py  presets.py  solve.py  solver_cache.py  sparse_tensor.py
torch_sla/backends/: __init__.py  amgx_backend.py  nvmath_backend.py  pyamg_backend.py  pytorch_backend.py  strumpack_backend.py  torch_spsolve_backend.py
torch_sla/datasets/: __init__.py  _benchmarks.py  problems.py  sparse_problem.py  suitesparse.py
torch_sla/distributed/: __init__.py  collectives.py  core.py  eigsh.py  graph.py  matvec.py  solve.py
torch_sla/sparse_tensor/: __init__.py  autograd.py  convert.py  core.py  graph.py  linalg.py  list.py  matmul.py  ops.py  reductions.py  structural.py  utils.py  viz.py
(+22 files in other folders)
